Fix the values of temperature.

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -37,7 +37,7 @@
 \vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000 times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{\textbf{61 kg/cm\ts{3}}, Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.\fnc{\ldots{}having become \bibtextul{sixty thousand} times as dense as your sun\ldots{} \bibexpl{Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)}}
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{\textbf{One of your nearer neighbours}, The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
-\vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 1,600\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{\textbf{40,000,000 times}, Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
+\vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 3,000\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{\textbf{40,000,000 times}, Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
 \usection{5.\bibnobreakspace Solar Radiation}
 \vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X\hyp{}rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
 \vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million pounds sterling a kilogram.
@@ -54,10 +54,10 @@
 \vs p041 6:4 Calcium is an active and versatile element at solar temperatures. The stone atom has two agile and loosely attached electrons in the two outer electronic circuits, which are very close together. Early in the atomic struggle it loses its outer electron; whereupon it engages in a masterful act of juggling the 19\ts{th} electron back and forth between the 19\ts{th} and 20\ts{th} circuits of electronic revolution. By tossing this 19\ts{th} electron back and forth between its own orbit and that of its lost companion more than 25,000 times a second, a mutilated stone atom is able partially to defy gravity and thus successfully to ride the emerging streams of light and energy, the sunbeams, to liberty and adventure. This calcium atom moves outward by alternate jerks of forward propulsion, grasping and letting go the sunbeam about 25,000 times each second. And this is why stone is the chief component of the worlds of space. Calcium is the most expert solar\hyp{}prison escaper.
 \vs p041 6:5 The agility of this acrobatic calcium electron is indicated by the fact that, when tossed by the temperature\hyp{}X\hyp{}ray solar forces to the circle of the higher orbit, it only remains in that orbit for about $10^{-6}$ seconds; but before the electric\hyp{}gravity power of the atomic nucleus pulls it back into its old orbit, it is able to complete 1,000,000 revolutions about the atomic centre.
 \vs p041 6:6 \pc Your sun has parted with an enormous quantity of its calcium, having lost tremendous amounts during the times of its convulsive eruptions in connection with the formation of the solar system. Much of the solar calcium is now in the outer crust of the sun.
-\vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 3,300\,°C\fnst{\textbf{3,300\,°C}, See the note at \bibref[41:6.7]{p041 6:7}.}, this temperature being very favourable to the registry of the iron spectrum.
+\vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 6,000\,°C, this temperature being very favourable to the registry of the iron spectrum.
 \usection{7.\bibnobreakspace Sources of Solar Energy}
 \vs p041 7:1 The internal temperature of many of the suns, even your own, is much higher than is commonly believed. In the interior of a sun practically no whole atoms exist; they are all more or less shattered by the intensive X\hyp{}ray bombardment which is indigenous to such high temperatures. Regardless of what material elements may appear in the outer layers of a sun, those in the interior are rendered very similar by the dissociative action of the disruptive X\hyp{}rays. X\hyp{}ray is the great leveler of atomic existence.
-\vs p041 7:2 The surface temperature of your sun is almost 3,300\,°C\fnst{\textbf{3,300\,°C}, The American original text says ``6,000 degrees'' and specifies that it refers to our Fahrenheit scale. However, the number 6,000 is clearly taken from p.\,14 of A.S.~Eddington's ``Stars and Atoms'', where it refers to our Celsius scale (p.4 ibid). Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are likely to be in agreement with the value given in this Revelation.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 19,500,000\,°C in the central regions. (All of these temperatures refer to your Celsius scale.)
+\vs p041 7:2 The surface temperature of your sun is almost 6,000\,°C\fnst{\textbf{6,000\,°C}, The American original text says ``6,000 degrees'' and specifies that it refers to our Fahrenheit scale. However, the number 6,000 is clearly taken from p.\,14 of A.S.~Eddington's ``Stars and Atoms'', where it refers to our Celsius scale (p.4 ibid). Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are likely to be in agreement with the value given in this Revelation, as long as the units discrepancy is taken into count.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 35,000,000\,°C in the central regions. (All of these temperatures refer to your Celsius\fnc{\textbf{Celsius}, The American text says ``Fahrenheit''. However, it is now perfectly clear that these temperatures were taken from the abovementioned human source without converting from Celsius to Fahrenheit (for reason or reasons unknown).} scale.)
 \vs p041 7:3 \pc All of these phenomena are indicative of enormous energy expenditure, and the sources of solar energy, named in the order of their importance, are:
 \vs p041 7:4 \ublistelem{1.}\bibnobreakspace Annihilation of atoms and, eventually, of electrons.
 \vs p041 7:5 \ublistelem{2.}\bibnobreakspace Transmutation of elements, including the radioactive group of energies thus liberated.
@@ -66,8 +66,8 @@
 \vs p041 7:8 \ublistelem{5.}\bibnobreakspace Solar contraction; the cooling and consequent contraction of a sun yields energy and heat sometimes greater than that supplied by space matter.
 \vs p041 7:9 \ublistelem{6.}\bibnobreakspace Gravity action at high temperatures transforms certain circuitized power into radiative energies.
 \vs p041 7:10 \ublistelem{7.}\bibnobreakspace Recaptive light and other matter which are drawn back into the sun after having left it, together with other energies having extrasolar origin.
-\vs p041 7:11 \pc There exists a regulating blanket of hot gases (sometimes millions of degrees in temperature) which envelops the suns, and which acts to stabilize heat loss and otherwise prevent hazardous fluctuations of heat dissipation. During the active life of a sun the internal temperature of 19,500,000\,°C remains about the same quite regardless of the progressive fall of the external temperature.
-\vs p041 7:12 \pc You might try to visualize 19,500,000\,°C of heat, in association with certain gravity pressures, as the electronic boiling point. Under such pressure and at such temperature all atoms are degraded and broken up into their electronic and other ancestral components; even the electrons and other associations of ultimatons may be broken up, but the suns are not able to degrade the ultimatons.
+\vs p041 7:11 \pc There exists a regulating blanket of hot gases (sometimes millions of degrees in temperature) which envelops the suns, and which acts to stabilize heat loss and otherwise prevent hazardous fluctuations of heat dissipation. During the active life of a sun the internal temperature of 35,000,000\,°C remains about the same quite regardless of the progressive fall of the external temperature.
+\vs p041 7:12 \pc You might try to visualize 35,000,000\,°C of heat, in association with certain gravity pressures, as the electronic boiling point. Under such pressure and at such temperature all atoms are degraded and broken up into their electronic and other ancestral components; even the electrons and other associations of ultimatons may be broken up, but the suns are not able to degrade the ultimatons.
 \vs p041 7:13 These solar temperatures operate to enormously speed up the ultimatons and the electrons, at least such of the latter as continue to maintain their existence under these conditions. You will realize what high temperature means by way of the acceleration of ultimatonic and electronic activities when you pause to consider that one drop of ordinary water contains over $10^{21}$ of atoms\fnst{\textbf{atoms}, the mass of such a drop would be: $m = 1/3\times(2 m_H + m_O)\times 10^{21} = 0.01\,g$.}. This is the energy of more than 100 horsepower exerted continuously for two years\fnst{\textbf{100 horsepower \ldots\ two years}, assuming the value of 1\,horsepower = 745.7\,watts, we obtain for the energy $E = 100\times 745.7\times 2\times 365\times 86,400 = 4.7\times 10^{12}\,J$. Using Einstein's formula $E = mc^2$, we can calculate the mass of the drop: $m = E/c^2 = 0.05\,g$. This is five times greater than the estimate obtained in the previous note, based on the number of atoms in the drop. Therefore, either Einstein's formula is incorrect (but then how to reconcile this with the statement made in \bibref[42:4.11]{p042 4:11}?) or the masses of hydrogen and oxygen atoms are different from the present values or, perhaps, the revelators are not overly concerned with being absolutely accurate in such minor technical details. It is, however, curious that this example is taken from pp.\,102--103 of A.S.~Eddington's ``Stars and Atoms'', where the author commits the same mistake, which is carried over here.}. The total heat now given out by the solar system sun each second is sufficient to boil all the water in all the oceans on Urantia in just one second of time.
 \vs p041 7:14 \pc Only those suns which function in the direct channels of the main streams of universe energy can shine on forever. Such solar furnaces blaze on indefinitely, being able to replenish their material losses by the intake of space\hyp{}force and analogous circulating energy. But stars far removed from these chief channels of recharging are destined to undergo energy depletion --- gradually cool off and eventually burn out.
 \vs p041 7:15 Such dead or dying suns can be rejuvenated by collisional impact or can be recharged by certain nonluminous energy islands of space or through gravity\hyp{}robbery of near\hyp{}by smaller suns or systems. The majority of dead suns will experience revivification by these or other evolutionary techniques. Those which are not thus eventually recharged are destined to undergo disruption by mass explosion when the gravity condensation attains the critical level of ultimatonic condensation of energy pressure. Such disappearing suns thus become energy of the rarest form, admirably adapted to energize other more favourably situated suns.
@@ -77,7 +77,7 @@
 \vs p041 8:3 \pc In large suns --- small circular nebulae --- when hydrogen is exhausted and gravity contraction ensues, if such a body is not sufficiently opaque to retain the internal pressure of support for the outer gas regions, then a sudden collapse occurs. The gravity\hyp{}electric changes give origin to vast quantities of tiny particles devoid of electric potential, and such particles readily escape from the solar interior, thus bringing about the collapse of a gigantic sun within a few days. It was such an emigration of these “runaway particles” that occasioned the collapse of the giant nova of the Andromeda nebula about 50 years ago. This vast stellar body collapsed in 40 minutes of Urantia time.
 \vs p041 8:4 As a rule, the vast extrusion of matter continues to exist about the residual cooling sun as extensive clouds of nebular gases. And all this explains the origin of many types of irregular nebulae, such as the Crab nebula, which had its origin about 900 years ago, and which still exhibits the mother sphere as a lone star near the centre of this irregular nebular mass.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/crab.jpg}\caption{The Crab Nebula from VLT}\end{figure}}
 \usection{9.\bibnobreakspace Sun Stability}
-\vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X\hyp{}rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 19,500,000\,°C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
+\vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X\hyp{}rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 35,000,000\,°C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
 \vs p041 9:2 \pc Atoms and electrons are subject to gravity. The ultimatons are \bibemph{not} subject to local gravity, the interplay of material attraction, but they are fully obedient to absolute or Paradise gravity, to the trend, the swing, of the universal and eternal circle of the universe of universes. Ultimatonic energy does not obey the linear or direct gravity attraction of near\hyp{}by or remote material masses, but it does ever swing true to the circuit of the great ellipse of the far\hyp{}flung creation.
 \vs p041 9:3 \pc Your own solar centre radiates almost $10^{14}$\fnst{$\mathbf{10^{14}}$, The American text says ``one hundred billion'', but this is a quotation from p.98 of A.S.~Eddington's ``Stars and Atoms'', where the \bibemph{English} billions (million million) are used and not the \bibemph{American} billions, i.e. thousand million. Otherwise, the figure given in the text would be thousand times smaller than the actual value well-known in the modern science.} tons of actual matter annually, while the giant suns lose matter at a prodigious rate during their earlier growth, the first billion years. A sun’s life becomes stable after the maximum of internal temperature is reached, and the subatomic energies begin to be released. And it is just at this critical point that the larger suns are given to convulsive pulsations.
 \vs p041 9:4 Sun stability is wholly dependent on the equilibrium between gravity\hyp{}heat contention --- tremendous pressures counterbalanced by unimagined temperatures. The interior gas elasticity of the suns upholds the overlying layers of varied materials, and when gravity and heat are in equilibrium, the weight of the outer materials exactly equals the temperature pressure of the underlying and interior gases. In many of the younger stars continued gravity condensation produces ever\hyp{}heightening internal temperatures, and as internal heat increases, the interior X\hyp{}ray pressure of supergas winds becomes so great that, in connection with the centrifugal motion, a sun begins to throw its exterior layers off into space, thus redressing the imbalance between gravity and heat.
