Add a note to 42:4.2

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -52,7 +52,7 @@
 \vs p042 3:13 \pc The foregoing classification of matter pertains to its organization rather than to the forms of its appearance to created beings. Neither does it take into account the pre\hyp{}emergent stages of energy nor the eternal materializations on Paradise and in the central universe.
 \usection{4.\bibnobreakspace Energy and Matter Transmutations}
 \vs p042 4:1 Light, heat, electricity, magnetism, chemism, energy, and matter are --- in origin, nature, and destiny --- one and the same thing, together with other material realities as yet undiscovered on Urantia.
-\vs p042 4:2 We do not fully comprehend the almost endless changes to which physical energy may be subject. In one universe it appears as light, in another as light plus heat, in another as forms of energy unknown on Urantia; in untold millions of years it may reappear as some form of restless, surging electrical energy or magnetic power; and still later on it may again appear in a subsequent universe as some form of variable matter going through a series of metamorphoses, to be followed by its outward physical disappearance in some great cataclysm of the realms. And then, after countless ages and almost endless wandering through numberless universes, again may this same energy re\hyp{}emerge and many times change its form and potential; and so do these transformations continue through successive ages and throughout countless realms. Thus matter sweeps on, undergoing the transmutations of time but swinging ever true to the circle of eternity; even if long prevented from returning to its source, it is ever responsive thereto, and it ever proceeds in the path ordained by the Infinite Personality who sent it forth.
+\vs p042 4:2 We do not fully comprehend the almost endless changes to which physical energy may be subject. In one universe it appears as light, in another as light plus heat, in another as forms of energy unknown on Urantia; in untold millions of years it may reappear as some form of restless, surging electrical energy or magnetic power\fnst{\textbf{electrical energy or magnetic power}, This may be a pointer to the representation of Maxwell's equations in which the electric and magnetic fields are canonically conjugated variables, like the coordinate and momentum of Classical Mechanics. The hamiltonian of the electromagnetic field in such representation would have the following compact and beautiful geometric form: \begin{equation}H[E,B] = {1\over2} \int\,d^3x (E\wedge dE + B\wedge dB)\end{equation} The above leads directly to the usual Maxwell's equations:\begin{align}\partial_t E_i & = {\delta H\over\delta B_i} = \epsilon_{ijk}\partial_j B_k\\ \partial_t B_i & = - {\delta H\over\delta E_i} = - \epsilon_{ijk}\partial_j E_k\end{align} and the canonical quantisation leads to the Schr\"odinger equation in $E$-representation ($B_i \rightarrow -i{\delta\over\delta E_i})$ of the form: \begin{equation}i{\partial\Psi[E,t)\over\partial t} = {1\over2}\int\,d^3x \epsilon_{ijk}\left(E_i\partial_j E_k\Psi - {\delta\over\delta E_i}{\partial\over\partial x^j}{\delta\Psi\over\delta E_k}\right)\end{equation}}; and still later on it may again appear in a subsequent universe as some form of variable matter going through a series of metamorphoses, to be followed by its outward physical disappearance in some great cataclysm of the realms. And then, after countless ages and almost endless wandering through numberless universes, again may this same energy re\hyp{}emerge and many times change its form and potential; and so do these transformations continue through successive ages and throughout countless realms. Thus matter sweeps on, undergoing the transmutations of time but swinging ever true to the circle of eternity; even if long prevented from returning to its source, it is ever responsive thereto, and it ever proceeds in the path ordained by the Infinite Personality who sent it forth.
 \vs p042 4:3 The power centres and their associates are much concerned in the work of transmuting the ultimaton into the circuits and revolutions of the electron. These unique beings control and compound power by their skillful manipulation of the basic units of materialized energy, the ultimatons. They are masters of energy as it circulates in this primitive state. In liaison with the physical controllers they are able to effectively control and direct energy even after it has transmuted to the electrical level, the so\hyp{}called electronic stage. But their range of action is enormously curtailed when electronically organized energy swings into the whirls of the atomic systems. Upon such materialization, these energies fall under the complete grasp of the drawing power of linear gravity.
 \vs p042 4:4 Gravity acts positively on the power lanes and energy channels of the power centres and the physical controllers, but these beings have only a negative relation to gravity --- the exercise of their antigravity endowments.
 \vs p042 4:5 Throughout all space, cold and other influences are at work creatively organizing ultimatons into electrons. Heat is the measurement of electronic activity, while cold merely signifies absence of heat --- comparative energy rest --- the status of the universal force\hyp{}charge of space provided neither emergent energy nor organized matter were present and responding to gravity.
