--- a/tex/title.tex
+++ b/tex/title.tex
@@ -51,7 +51,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
 \itshape
-The Standard Reference Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
+The Revised Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
 with Metric Measures, \totalnfncs\ Textual Variants,\\
 \totalnfnsts\ Study Notes \&\ \totalfigures\ Illustrations\\[2ex]
@@ -88,13 +88,13 @@ Edited by Tigran Aivazian\\[2ex]
 \tunemarkup{pgafour}{\Large\itshape}
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
-The text of the Urantia Papers is in the public domain}.\\[5pt]
+The original text of \bibemph{The Urantia Papers} is in the public domain\\
+The present text of \bibemph{The Revised Urantia Papers} is also hereby placed in the public domain}.\\[5pt]
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge, www.vision-afar.com.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
 Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
-		\tunemarkuptwo{nofnt}{}{The apparatus (marked with a circle\r{} in the text) contains all significant changes made since the 1955 first edition.\\}
-		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note other than a textual variant.\\[5pt]}
+		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
 \tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
