--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -24,8 +24,7 @@ INTRODUCTION
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
 
 \begin{itemize}
-\item The Standard Reference Text (SRT) of the Fifth Epochal Revelation has been used as a base of this work, with very few exceptions.
-\item All significant changes to the text (present also in SRT) are documented in the critical apparatus, together with a brief explanation of the reason for the change. To signify the presence of a textual variant, a circle is printed at the end of the affected word or paragraph, like this\r{}.
+\item The text is called \bibemph{The Revised Urantia Papers} and is based on the original Fifth Epochal Revelation revised according to my knowledge and experience.
 \item Study notes have been added and are marked with an asterisk, like this\ts{*}.
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
@@ -34,6 +33,17 @@ INTRODUCTION
 \item Paragraph numbering is used both in the superscript and in the ranges printed in the head\-er of every page.
 \item Possible textual corruptions are indicated in the footnotes.
 \end{itemize}
+
+The need for the revision of the text was predicted at \bibref[101:4.2]{p101 4:2}:
+
+\begin{quote}
+\ldots\ within a few short years many of our statements regarding the physical sciences will stand in need of revision in consequence of additional scientific developments and new discoveries.
+\end{quote}
+
+Well, those ``few short years'' have come to pass and it now devolves upon us --- its students and guardians --- to revise,
+expand and fearlessly continue the living stream of the Fifth Epochal Revelation.
+And to all those fearful and unbelieving who would speedily accuse me of blasphemy I say with my Lord and my Master:
+``My Father worketh hitherto, and I work'' (John~5:17).
 
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 Many thanks to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
