Revised 41:3.2 according to the present scientific knowledge

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -1,5 +1,5 @@
 \upaper{41}{Physical Aspects of the Local Universe}
-\author{Archangel\ts{*}}\footnotetext{\textbf{Archangel}, Human source: A.S.~Eddington ``Stars and Atoms'' (1927).}
+\author{Archangel\ts{*}}\footnotetext{\textbf{Archangel}, Human sources: A.S.~Eddington ``Stars and Atoms'' (1927), J. Jeans ``Through Space and Time'' (1943).}
 \vs p041 0:1 The characteristic space phenomenon which sets off each local creation from all others is the presence of the Creative Spirit. All Nebadon is certainly pervaded by the space presence of the Divine Minister of Salvington, and such presence just as certainly terminates at the outer borders of our local universe. That which is pervaded by our local universe Mother Spirit \bibemph{is} Nebadon; that which extends beyond her space presence is outside Nebadon, being the extra\hyp{}Nebadon space regions of the superuniverse of Orvonton --- other local universes.
 \vs p041 0:2 \pc While the administrative organization of the grand universe discloses a clear\hyp{}cut division between the governments of the central, super-, and local universes, and while these divisions are astronomically paralleled in the space separation of Havona and the 7 superuniverses, no such clear lines of physical demarcation set off the local creations. Even the major and minor sectors of Orvonton are (to us) clearly distinguishable, but it is not so easy to identify the physical boundaries of the local universes. This is because these local creations are administratively organized in accordance with certain \bibemph{creative} principles governing the segmentation of the total energy charge of a superuniverse, whereas their physical components, the spheres of space --- suns, dark islands, planets, etc. --- take origin primarily from nebulae, and these make their astronomical appearance in accordance with certain \bibemph{precreative} (transcendental) plans of the Architects of the Master Universe.
 \vs p041 0:3 One or more --- even many --- such nebulae may be encompassed within the domain of a single local universe even as Nebadon was physically assembled out of the stellar and planetary progeny of Andronover and other nebulae. The spheres of Nebadon are of diverse nebular ancestry, but they all had a certain minimum commonness of space motion which was so adjusted by the intelligent efforts of the power directors as to produce our present aggregation of space bodies, which travel along together as a contiguous unit over the orbits of the superuniverse.
@@ -20,8 +20,8 @@
 \vs p041 2:7 \pc These intelligent creatures of power control and energy direction must adjust their technique on each sphere in accordance with the physical constitution and architecture of that planet. They unfailingly utilize the calculations and deductions of their respective staffs of physicists and other technical advisers regarding the local influence of highly heated suns and other types of supercharged stars. Even the enormous cold and dark giants of space and the swarming clouds of star dust must be reckoned with; all of these material things are concerned in the practical problems of energy manipulation.
 \vs p041 2:8 The power\hyp{}energy supervision of the evolutionary inhabited worlds is the responsibility of the Master Physical Controllers, but these beings are not responsible for all energy misbehaviour on Urantia. There are a number of reasons for such disturbances, some of which are beyond the domain and control of the physical custodians. Urantia is in the lines of tremendous energies, a small planet in the circuit of enormous masses, and the local controllers sometimes employ enormous numbers of their order in an effort to equalize these lines of energy. They do fairly well with regard to the physical circuits of Satania but have trouble insulating against the powerful Norlatiadek currents.
 \usection{3.\bibnobreakspace Our Starry Associates}
-\vs p041 3:1 There are upward of 2,000 brilliant suns\fnst{\textbf{2,000 brilliant suns}, A sphere centred on Urantia with the radius of 65\,ly contains about 2,000 stars. Therefore, assuming that the star density in other parts of Satania is at least as great as in the vicinity of our Sun, we can deduce that the size of Satania cannot be greater than 65\,ly.} pouring forth light and energy in Satania, and your own sun is an average blazing orb. Of the 30 suns nearest yours, only 3 are brighter\fnst{\textbf{only 3 are brighter}, The 30 nearest stars lie in a sphere of radius 12.6\,ly and the three stars brighter than ours are: $\alpha$ Centauri (4.35\,ly), Sirius (8.57\,ly) and Procyon (11.4\,ly).}. The Universe Power Directors initiate the specialized currents of energy which play between the individual stars and their respective systems. These solar furnaces, together with the dark giants of space, serve the power centres and physical controllers as way stations for the effective concentrating and directionizing of the energy circuits of the material creations.
-\vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{\textbf{slightly less}, Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km.}. The largest star in the universe, the stellar cloud Antares, is 450 times the diameter of your sun\fnst{\textbf{Antares, is 450 times the diameter of your sun}, According to the present astronomical data for Antares, its diameter (measured by parallax and observed angular diameter) is 800 times that of our sun.} and is 60,000,000 times its volume\fnst{\textbf{60,000,000 times its volume}, There is an apparent contradiction here, as long as the shape of Antares is assumed to be spherical and its volume calculated according to the formula of Euclidean geometry: $450^3 = 91,125,000 \neq 60,000,000$. Antares, being a Class M supergiant with the mass of $15.5 M_{\odot}$, has a density far too low to account for the contribution from the space curvature according to the General Relativity, thus implying a non-spherical (most likely spheroid) shape.}. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges\fnst{\textbf{one dozen oranges}, In the human original we have ``thirty cricket balls'' instead.} would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
+\vs p041 3:1 There are upward of 2,000 brilliant suns\fnst{\textbf{2,000 brilliant suns}, A sphere centred on Urantia with the radius of 65\,ly contains about 2,000 stars. Therefore, assuming that the star density in other parts of Satania is at least as great as in the vicinity of our Sun, we can deduce that the size of Satania cannot be greater than 65\,ly.} pouring forth light and energy in Satania, and your own sun is an average blazing orb. Of the 30 suns nearest yours, only 3 are brighter\fnst{\textbf{only 3 are brighter}, The 30 nearest stars lie in a sphere of radius 12.6\,ly and the three stars brighter than ours are: $\alpha$ Centauri (4.35\,ly), Sirius (8.57\,ly) and Procyon (11.4\,ly). These are the three stars mentioned in the human source as well.}. The Universe Power Directors initiate the specialized currents of energy which play between the individual stars and their respective systems. These solar furnaces, together with the dark giants of space, serve the power centres and physical controllers as way stations for the effective concentrating and directionizing of the energy circuits of the material creations.
+\vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{\textbf{slightly less}, Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km.}. The largest star in the universe, the stellar cloud Antares, has a diameter 680 that of your sun\fnst{\textbf{680}, According to https://arxiv.org/abs/1304.4800} --- or about a billion kilometres. One could pack about 230 million\fnst{\textbf{230 million}, Calculated with the maximum theoretical packing efficiency of 74\% for identical spheres.} of your own suns inside it, and there would still be room to spare. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges\fnst{\textbf{one dozen oranges}, In the human original we have ``thirty cricket balls'' instead.} would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
 \vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas\fnst{\textbf{supergas}, Defined at \bibref[41:4.3]{p041 4:3} as alsmost fully ionized plasma.} pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
 \vs p041 3:4 When less than \bibfrac{1}{10}\ts{th} the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
 \vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572.\fnst{\textbf{A.D.\,1572}, The supernova SN\,1572 appeared in early November 1572 is known as ``Tycho's supernova'', because in 1573 Tycho Brahe published both his own observations and the analysis of sightings of others. In England, Queen Elizabeth summoned Thomas Allen the mathematician to have his advice about the new Star that appeared in the Cassiopeia. In China, the star was interpreted as an evil omen for the young Wanli Emperor, which, however did not prevent him reigning for the next 48 years.} This conflagration was so intense that the explosion was clearly visible in broad daylight.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Tycho-Supernova.jpg}\caption{X-ray image of SN\,1572, Chandra X-ray Observatory.}\end{figure}}
