--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -13,7 +13,7 @@ INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
-\tunemarkup{pgkobomini}{\fontsize{17.4}{19.5}\selectfont}
+\tunemarkup{pgkobomini}{\fontsize{15.5}{18}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
@@ -44,6 +44,12 @@ Well, those ``few short years'' have come to pass and it now devolves upon us --
 expand and fearlessly continue the living stream of the Fifth Epochal Revelation.
 And to all those fearful and unbelieving who would speedily accuse me of blasphemy I say with my Lord and my Master:
 ``My Father worketh hitherto, and I work'' (John~5:17).
+Nevertheless, I (and a team of others) have carefully preserved the original First Edition (1955) of \bibemph{The Urantia Book}
+and made it available on my website in both electronic and printed form:
+
+\begin{center}
+\texttt{\normalsize http://www.bibles.org.uk/guardian-plates.html}
+\end{center}
 
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 Many thanks to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
