--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -24,7 +24,8 @@ INTRODUCTION
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
 
 \begin{itemize}
-\item The text is called \bibemph{The Revised Urantia Papers} and is based on the original Fifth Epochal Revelation revised according to my knowledge and experience.
+\item The revised text of \bibemph{The Urantia Papers} (also known as the SRT) is based on the original Fifth Epochal Revelation,
+revised according to the present scientific knowledge.
 \item Study notes have been added and are marked with an asterisk, like this\ts{*}.
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
 \item All distance and temperature measures have been converted to metric units, except where there was even the slightest potential for error, such as in the use of ``Jerusem miles'', which was left intact. The idiomatic expressions like ``carry his pack for a mile'' were also left intact, obviously.
